# imebra

./: .gitattributes  .gitignore  Age.cpp  Age.hpp  AgeUnitDefinitions.cpp  AgeUnitDefinitions.hpp  AgeUnitDefinitions.ts  Arguments.cpp  Arguments.hpp  CMakeLists.txt  CodecFactory.cpp  CodecFactory.hpp  CodecTypeDefinitions.cpp  CodecTypeDefinitions.hpp  CodecTypeDefinitions.ts  Constants.cpp  Constants.hpp  DataSet.cpp  DataSet.hpp  Date.cpp  Date.hpp  DicomDefinitions.cpp  DicomDefinitions.hpp  DicomDefinitions.ts  DicomDictionary.cpp  DicomDictionary.h  DicomDir.cpp  DicomDir.hpp  DicomDirEntry.cpp  DicomDirEntry.hpp  Image.cpp  Image.h  PatientName.cpp  PatientName.hpp  README.md  Tag.cpp  Tag.hpp  TagId.cpp  TagId.hpp  TagVRDefinitions.cpp  (+12 more)
imebra/: CMakeLists.txt  appveyor.yml  bitbucket-pipelines.yml  build.xml  getVersion.py  readme.rst
imebra-cmake/: CMakeLists.txt
imebra-cmake/imebra_5_3_3_0/: CMakeLists.txt  license.rst
imebra/docs/: Doxyfile  Makefile  acse_classes.rst  add_to_project.rst  changes_log.rst  conf.py  copyright.rst  dicom_data_classes.rst  dicom_dictionary_classes.rst  dicom_uid_generation_classes.rst  dimse_classes.rst  documentation.html  download.rst  doxygenLayout.xml  imebra.mdj  imebra_requirements.xml  introduction.rst  memory_management_classes.rst  migration_guide.rst  objects_lifecycle.rst  requirements.txt  riskAnalysis.xsd  risks_requirements.rst  transforms_classes.rst
imebra/tests/: acseTest.cpp  bitTransformTest.cpp  buildImageForTest.cpp  corruptedFilesTest.cpp  dateTimeHandlerTest.cpp  dicomCodecTest.cpp  dicomDictionaryTest.cpp  dicomDirTest.cpp  drawBitmapTest.cpp  exceptionsTest.cpp  jpegCodecTest.cpp  memoryTest.cpp  multipleImagesTest.cpp  numericHandlerTest.cpp  stringHandlerTest.cpp  tcpTest.cpp  testsSettings.cpp  (+3 more)
openjpeg/: .travis.yml  CMakeLists.txt  NEWS.md  THANKS.md  appveyor.yml
openjpeg-cmake/: CMakeLists.txt
test/: .gitignore  0002.DCM  index.ts
(+1095 files in other folders)
